# manim_chess

./: LICENSE.txt  Readme.md  __init__.py  pyproject.toml
manim_chess/: board.py  game_player.py
manim_chess.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  board.py  evaluation_bar.py  game_player.py
tests/: board_test.py  game_player_test.py
